# messenger

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: chat_client.h  client.h  client.hpp
client/src/: chat_client.cpp  client.cpp
core/: CMakeLists.txt
core/include/: chat_message.h
core/src/: chat_message.cpp
server/: CMakeLists.txt
server/include/: chat_participant.h  chat_room.h  chat_server.h  chat_session.h  server.h  server.hpp
server/src/: chat_room.cpp  chat_server.cpp  chat_session.cpp  server.cpp
